--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 h2{
-	font-family: 'Playfair Display', serif;
+	font-family: 'PT Sans';
 	margin: 10px 0 5px;
 	font-size: 26px;
 	font-style: italic;
@@ -84,7 +84,7 @@ li {
 }
 
 .profile h1.name {
-    font-family: 'Playfair Display';
+    font-family: 'PT Sans';
     font-size: 24px;
     text-align: center;
     color: #9c27b0;
@@ -325,7 +325,7 @@ li {
     line-height: 24px;
     margin-top: 0;
     font-style: italic;
-    font-family: 'Playfair Display', serif;
+    font-family: 'PT Sans';
 }
 
 .infos .formation li.item .point > i.fa{
